--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "description": "Frontend for YouTube to MP3 Converter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:backend": "cd backend && npm test",
+    "test:frontend": "cd frontend && npm test"
   },
   "keywords": [],
   "author": "Lodney Santos",
@@ -12,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "frontend": "file:",
+    "jest": "^29.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "youtube-to-mp3-converter-frontend": "file:"
