--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "youtube-to-mp3-converter-frontend",
-  "version": "1.0.0",
-  "description": "Frontend for YouTube to MP3 Converter",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "test:backend": "cd backend && npm test",
-    "test:frontend": "cd frontend && npm test"
-  },
-  "keywords": [],
-  "author": "Lodney Santos",
-  "license": "ISC",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^1.7.9",
+    "cra-template-pwa": "2.0.0",
     "frontend": "file:",
-    "jest": "^29.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "youtube-to-mp3-converter-frontend": "file:"
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
