--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
