--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,91 @@
-# Node.js modules
-node_modules/
-
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-#OS files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.idea/
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Env files
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# .VS CODE directory
-.vscode/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Coverage directory
-coverage/
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+Thumbs.db
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 #Backup
 frontend_backup.zip
+
+# Vite dependencies
+/.vite/
+
+# System configuration files
+*.env
+
+# Build files (for production)
+/dist/
+
+# Don't ignore important configuration files
+!vite.config.js
+!eslint.config.js
+!tsconfig.json
+!vite-env.d.ts
