--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.9",
     "vibralisten": "file:"
   },
   "devDependencies": {
