--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,17 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.9",
     "vibralisten": "file:"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.7.2",
+    "autoprefixer": "^10.4.20",
     "buffer": "^6.0.3",
     "empty-module": "^0.0.2",
+    "postcss": "^8.5.3",
     "process": "^0.11.10",
+    "tailwindcss": "^4.0.9",
     "vite": "^6.0.11"
   }
 }
