--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "vibralisten",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
     "lottie-react": "^2.4.1",
@@ -18,6 +11,7 @@
     "vibralisten": "file:"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
@@ -27,5 +21,14 @@
     "process": "^0.11.10",
     "tailwindcss": "^4.0.9",
     "vite": "^6.0.11"
-  }
+  },
+  "name": "vibralisten",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "serve": "vite preview",
+    "start": "vite"
+  },
+  "type": "module",
+  "version": "1.0.0"
 }
