--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.477.0",
     "postcss-import": "^16.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
