--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
+    "framer-motion": "^12.5.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.477.0",
     "postcss-import": "^16.1.0",
