--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@coreui/react": "^5.5.0",
     "@lottiefiles/dotlottie-react": "^0.13.1",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/vite": "^4.0.9",
